--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'org.springframework.data:spring-data-envers'
 	implementation 'mysql:mysql-connector-java'
 
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
