--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -23,6 +23,8 @@ configurations {
 }
 
 dependencies {
+	implementation project(path: ":zerobase-domain", configuration: 'default')
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
