--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'com.zerobase.cms'
+group = 'com.zerobase.cms.user'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -31,6 +31,8 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
 
 	implementation 'org.springframework.data:spring-data-envers'
 	implementation 'mysql:mysql-connector-java'
