--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -1,13 +1,13 @@
+server.port=8081
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 feign.okhttp.enabled=true
-
-spring.datasource.url=jdbc:mysql://localhost:3309/customer?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
+feign.autoconfiguration.jackson.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/zeroorder?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=pjcms
-spring.datasource.password=a1234
-
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
