--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
 	implementation 'org.springframework.data:spring-data-envers'
 	implementation 'mysql:mysql-connector-java'
