--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8082
+server.shutdown=graceful
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 feign.okhttp.enabled=true
 feign.autoconfiguration.jackson.enabled=true
@@ -9,5 +10,5 @@ spring.datasource.password=1234
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
